# jinjafx

./: CHANGELOG.md  LICENSE  README.md  jfx_server  jinjafx  jinjafx.py  jinjafx_server.py  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml  codeql.yml  pypi-release.yml
contrib/: jinjafx.asciinema  jinjafx.json
docker/: Dockerfile  Dockerfile.Master  Dockerfile.Release  Dockerfile.ubi8  README.md
extensions/: ansible_ipaddr.py  ext.py  ext_ansible_core.py  ext_ansible_ipaddr.py  ext_ansible_netcommon.py  ext_jinjafx.py  ext_netutils.py
jinjafx/: __init__.py  __main__.py  extensions  jinjafx.py
jinjafx/extensions/: ext_jinjafx.py
jinjafx_server/: README.md  jinjafx_server.py
jinjafx_server/docker/: Dockerfile.Branch  Dockerfile.HAProxy  Dockerfile.Master  Dockerfile.Release  README.md  haproxy.cfg
jinjafx_server/kubernetes/: README.md
jinjafx_server/www/: dt.html  index.html  jinjafx.css  jinjafx.js  jinjafx_dt.js  jinjafx_m.css  jinjafx_m.js  jinjafx_o.css  jinjafx_o.js  obsolete.html  obsolete.js  output.html
kubernetes/: README.md  jinjafx.yml
vaulty/: vaulty.py
www/: dt.html  index.html  jinjafx.css  jinjafx.js  jinjafx_m.css  jinjafx_o.css  output.html
